prisma/prisma-cloud/blocks/article/article.css
.article {
  --banner-background-color: var(--color-neutral-white);
  --banner-box-shadow: 0px 2px 4px 0px rgba(0, 55, 102, 0.25);
  --banner-caret-color: var(--color-blue--400);
  --banner-icon-background-color: var(--color-blue--100);
  --banner-text-color: var(--color-neutral-900);

  --copy-background-color-active: var(--color-neutral-050);

  --image-backdrop-color: var(--color-blue--050);
  --image-box-shadow: 0px 3.692307710647583px 14.769230842590332px 0px
    rgba(139, 180, 221, 0.3);

  --last-updated-text-color: var(--color-neutral-500);

  --outline-text-color: var(--color-neutral-900);

  --small-action-background-color: var(--color-neutral-black);
  --small-action-text-color: var(--color-neutral-white);
}

[data-user-theme="dark"] .article {
  --banner-background-color: var(--color-neutral-dark-600);
  --banner-box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.5);
  --banner-caret-color: var(--color-blue-dark--500);
  --banner-icon-background-color: var(--color-neutral-dark-800);
  --banner-text-color: var(--color-neutral-dark-100);

  --copy-background-color-active: var(--color-neutral-dark-500);

  --image-backdrop-color: var(--color-neutral-dark-500);
  --image-box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.5);

  --last-updated-text-color: var(--color-neutral-dark-200);

  --outline-text-color: var(--color-neutral-white);

  --small-action-background-color: var(--color-neutral-white);
  --small-action-text-color: var(--color-neutral-black);
}

.article {
  display: flex;
  height: 100%;
  width: 100%;
}

.article .contain {
  margin: 0 auto;
  max-width: var(--article-max-width);
}

.article.block.not-found .hidden-not-found {
  display: none;
}

.article-sidebar {
  color: var(--outline-text-color);
  display: flex;
  flex-direction: column;
  flex-shrink: 0;
  justify-content: space-between;
  /* Account for bottom padding of theme switcher */
  max-height: calc(100vh - var(--nav-height) - var(--spacing--4));
  position: sticky;
  top: calc(var(--nav-height) + var(--article-top-spacing));
  transition: color var(--action-ease-duration) var(--action-ease-function);
  width: 240px;
}

.article-sidebar * {
  position: relative;
  z-index: 1;
}

.article-outline {
  opacity: 0;
  padding: var(--spacing--20) var(--spacing--6) 0;
}

.article-outline.is-visible {
  opacity: 1;
}

.article-outline-title {
  font-size: var(--control-font-size--sm);
  line-height: var(--control-line-height--sm);
  margin-bottom: var(--spacing--3);
}

.article-outline ul {
  list-style: none;
  margin: 0;
  max-height: 65vh;
  overflow: auto;
  padding: 0;

  scrollbar-gutter: stable;

  /* Scrollbar styles */
  scrollbar-width: thin;
  scrollbar-color: var(--scrollbar-thumb-background-color) transparent;
  scrollbar-gutter: stable;
}

.article-outline ul::-webkit-scrollbar {
  height: 0.375rem;
  width: 8px;
}

.article-outline ul::-webkit-scrollbar-track {
  background-color: transparent;
}

.article-outline ul::-webkit-scrollbar-thumb {
  border-radius: 0.375rem;
}

.article-outline ul:hover::-webkit-scrollbar-thumb {
  background-color: var(--scrollbar-thumb-background-color);
}

.article-outline li {
  padding: 2px 2px 2px 0;
  position: relative;
  margin-top: 2px;
  margin-bottom: 2px;
}

.article-outline ul a {
  border-radius: var(--tertiary-action-border-radius);
  color: var(--tertiary-action-text-color);
  display: flex;
  font-size: var(--tertiary-action-font-size);
  line-height: var(--tertiary-action-line-height);
  padding: 8px var(--tertiary-action-padding);
  text-decoration: none;
  width: 100%;
}

.article-outline ul a:hover {
  background: var(--book-active-background-color);
  color: var(--book-active-text-color);
}

.article-outline ul a.scroll-spy__active {
  background-color: var(--tertiary-action-selected-background-color);
  color: var(--tertiary-action-selected-text-color);
}

.pan-article {
  background: var(--article-background);
  border-radius: var(--article-border-radius);
  min-height: 100vh;
  padding: var(--spacing--10);
  position: relative;
  transition: background-color var(--theme-transition-ease-duration)
    var(--theme-transition-ease-function);
  width: 100%;
  z-index: 1; /* Position above page outline */
}

.article [data-docs-heading] {
  position: relative;
}

.article [data-docs-heading]:hover button {
  opacity: 1;
}

.article [data-docs-heading] button:hover {
  background-color: var(--copy-background-color-active);
  cursor: pointer;
}

.article [data-docs-heading] button {
  align-items: center;
  background-color: transparent;
  border: none;
  border-radius: 50%;
  color: var(--color-body-text);
  display: flex;
  justify-content: center;
  left: -var(--spacing--2);
  opacity: 0;
  padding: 0;
  position: absolute;
  transform: translate(-100%, -50%);
  top: 50%;
  text-decoration: none;
  transition: background-color var(--theme-transition-ease-duration)
      var(--theme-transition-ease-function),
    opacity var(--theme-transition-ease-duration)
      var(--theme-transition-ease-function);
  height: var(--spacing--8);
  width: var(--spacing--8);
}

article [data-docs-heading] span {
  color: var(--icon-action--text-color);
  height: var(--spacing--4);
}

.article [data-docs-heading] svg {
  stroke: currentColor;
  fill: currentColor;
  height: var(--spacing--4);
  width: var(--spacing--4);
}

.pan-article .title {
  color: var(--banner-text-color);
  padding: 0;
}

.pan-article .title h1 {
  font-size: var(--heading-font-size--h3);
  line-height: var(--heading-line-height--h3);
  letter-spacing: var(--letter-spacing-neg--m);
  padding: 0;
}

.pan-article .last-updated {
  display: none;
  color: var(--last-updated-text-color);
}

.pan-article .last-updated.is-visible {
  display: flex;
}

.pan-article .banner {
  margin-bottom: var(--spacing--9);
}

.pan-article .banner-inner {
  position: relative;
  z-index: 0;
}

.pan-article .banner-inner h2,
.pan-article .banner-inner hr {
  display: none;
}
/* ... */

